tests/errors/operators/operator_attribute_errors.sad
# Operator Attribute Errors test
method my_func() { yield 1 }
risk {
    my_func + 5
} trap IllegalOperationError e {
    show(e.message)
}
